Add: SM2 Algo, Fix: Various test problems
Test:
Add AuthRequest setup with token.
Tests create a new test user for every test case.
Some controllers not Authorized
