# src/controllers/card/card.controller.ts
@@ -11,14 +11,23 @@ import {
 } from '@nestjs/common';
 import { CardService } from '../../services/card/card.service';
 import { CreateCardDto } from 'src/utils/types/dto/card/createCard.dto';
-import { IdParamDto } from 'src/utils/types/IDParam.dto';
+import { IdParamDto } from 'src/utils/types/dto/IDParam.dto';
 import { UpdateCardDto } from 'src/utils/types/dto/card/updateCard.dto';
+import { ApiOperation, ApiQuery, ApiResponse, ApiTags } from '@nestjs/swagger';
+import { RouteConfig } from 'src/utils/decorators/route.decorator';
 
+@ApiTags('Card')
 @Controller('card')
 export class CardController {
   constructor(private readonly cardService: CardService) {}
 
   @Post()
+  @ApiOperation({ summary: 'Create a new card' })
+  @ApiResponse({ status: 201, description: 'Card created successfully' })
+  @RouteConfig({
+    message: 'Create Card',
+    requiresAuth: true,
+  })
   create(
     @Body()
     createCardDto: CreateCardDto,
@@ -32,6 +41,13 @@ export class CardController {
   }
 
   @Get()
+  @ApiOperation({ summary: 'Get all cards' })
+  @ApiQuery({ name: 'deckId', required: false, type: Number })
+  @ApiResponse({ status: 200, description: 'Return all cards' })
+  @RouteConfig({
+    message: 'Get All Cards',
+    requiresAuth: true,
+  })
   findAll(@Query('deckId', ParseIntPipe) deckId?: number) {
     if (deckId) {
       return this.cardService.findByDeck(deckId);
@@ -40,11 +56,23 @@ export class CardController {
   }
 
   @Get(':id')
+  @ApiOperation({ summary: 'Get a card by id' })
+  @ApiResponse({ status: 200, description: 'Return a card' })
+  @RouteConfig({
+    message: 'Get All Cards',
+    requiresAuth: true,
+  })
   findOne(@Param() params: IdParamDto) {
     return this.cardService.findOne(params.id);
   }
 
   @Patch(':id')
+  @ApiOperation({ summary: 'Update a card' })
+  @ApiResponse({ status: 200, description: 'Card updated successfully' })
+  @RouteConfig({
+    message: 'Get All Cards',
+    requiresAuth: true,
+  })
   update(
     @Param() params: IdParamDto,
     @Body()
@@ -54,6 +82,12 @@ export class CardController {
   }
 
   @Delete(':id')
+  @ApiOperation({ summary: 'Delete a card' })
+  @ApiResponse({ status: 200, description: 'Card deleted successfully' })
+  @RouteConfig({
+    message: 'Get All Cards',
+    requiresAuth: true,
+  })
   remove(@Param() params: IdParamDto) {
     return this.cardService.remove(params.id);
   }
